--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
+    "mongoose": "^8.4.1",
+    "mongoose-paginate-v2": "^1.8.2",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
