--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NODE_MONGO="mongodb+srv://admin:1234@diaslucia.zbby1dz.mongodb.net/"
+NODE_ENV="mongodb+srv://admin:1234@diaslucia.zbby1dz.mongodb.net/"
